# next-gen-rag

./: .gitignore  README.md  langchain-rag-201.ipynb  nomic-embed-eval.ipynb  pyproject.toml  self-reflective-rag.ipynb  semantic-text-splitter.ipynb
app/: chain.py  server.py
dataset/: war_and_peace.txt
docs/: re-ranking.md
function-calling-nbs/: slim-function-calling.ipynb
nbs-multimodality/: overview-multimodality.ipynb
nbs-re-ranking/: flash-reranking.ipynb
notebooks/: langchain-rag-201.ipynb  self-reflective-rag.ipynb  semantic-router-what-is.ipynb  semantic-routing-local.ipynb  semantic-text-splitter.ipynb
re-ranking-nbs/: flash-reranking.ipynb  mxbai-rerank.ipynb
