[virtualenvs]
in-project = true

[tool.poetry]
name = "next-gen-rag"
version = "0.1.0"
description = ""
authors = ["Martin Fabbri <martin@fabbri.ai>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.24"
tiktoken = "^0.6.0"
chromadb = "^0.4.23"
langchain = "^0.1.9"
bs4 = "^0.0.2"
llama-cpp-python = "^0.2.55"
accelerate = "^0.30.1"
torch = "^2.3.0"
scikit-learn = "^1.4.2"
umap-learn = {extras = ["plot"], version = "^0.5.6"}
tqdm = "^4.66.4"
torchvision = "^0.18.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
dask = {extras = ["dataframe"], version = "^2024.5.0"}
ipywidgets = "^8.1.2"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
